--- a/index.html
+++ b/index.html
@@ -72,29 +72,26 @@
         <div class="promo-bottom">
 
           <div class="slider">
-
-
-
-
-            <div class="slider-controls">
-              <i class="active"></i>
-              <i></i>
+            <div class="slider-container">
+              <input class="visually-hidden" type="radio" id="product-1" name="toggle" checked>
+              <input class="visually-hidden" type="radio" id="product-2" name="toggle">
+              <div class="slider-controls">
+                <label class="slider-controls-item slider-controls-item--1" for="product-1">Первый</label>
+                <label class="slider-controls-item slider-controls-item--2" for="product-2">Второй</label>
+              </div>
+              <ul class="slider-list">
+                <li class="slider-item">
+                  <h3>Дрели</h3>
+                  <p>Соседям на радость!</p>
+                  <a class="slider-item-button slider-button" href="catalog.html">открыть каталог</a>
+                </li>
+                <li class="slider-item">
+                  <h3>Перфораторы</h3>
+                  <p>Настоящие мужские игрушки</p>
+                  <a class="slider-item-button slider-button" href="catalog.html">открыть каталог</a>
+                </li>
+              </ul>
             </div>
-
-            <ul class="slider-list">
-              <li class="slider-item">
-                <h3>Дрели</h3>
-                <p>Соседям на радость!</p>
-                <a class="slider-item-button button" href="catalog.html">Открыть каталог</a>
-              </li>
-              <li class="slider-item">
-                <h3>Перфораторы</h3>
-                <p>Настоящие мужские игрушки</p>
-                <a class="slider-item-button button" href="catalog.html">Открыть каталог</a>
-              </li>
-            </ul>
-
-
           </div>
 
           <div class="promo-right">
