добавил кнопки лево-право на слайдер

--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
 
           <div class="slider">
             <div class="slider-container">
+              <span class="carousel-control-prev-icon" aria-label="Предыдущий слайд"></span>
+              <span class="carousel-control-next-icon" aria-label="Следующий слайд"></span>
               <input class="visually-hidden" type="radio" id="product-1" name="toggle" checked>
               <input class="visually-hidden" type="radio" id="product-2" name="toggle">
               <div class="slider-controls">
