модалка добавления товара в корзину

--- a/index.html
+++ b/index.html
@@ -376,13 +376,11 @@
     </footer>
 
     <!-- popUp Cart -->
-    <section class="modal modal-buy visually-hidden">
-      <div>
-        <p>Товар добавлен в корзину!</p>
-      </div>
-      <div>
-        <a class="button" href="#" tabindex="0">Оформить заказ</a>
-        <a class="button" href="#" tabindex="0">Продолжить покупки</a>
+    <section class="modal modal-cart">
+      <p>Товар добавлен в корзину!</p>
+      <div class="buttonz">
+        <a class="modal-cart-button" href="#" tabindex="0">Оформить заказ</a>
+        <a class="modal-cart-button" href="#" tabindex="0">Продолжить покупки</a>
       </div>
       <button class="modal-close" type="button">Закрыть</button>
     </section>
