--- a/index.html
+++ b/index.html
@@ -375,7 +375,6 @@
       </div>
     </footer>
 
-    <!-- popUp Cart -->
     <section class="modal modal-cart">
       <p>Товар добавлен в корзину!</p>
       <div class="buttonz">
@@ -385,22 +384,25 @@
       <button class="modal-close" type="button">Закрыть</button>
     </section>
 
-    <!-- popUp Mail -->
-    <section class="modal modal-mail visually-hidden">
+    <section class="modal modal-mail">
       <form class="mail" method="post" action="https://echo.htmlacademy.ru">
-        <p>
-          <label for="user-name">Ваше имя:</label><br>
-          <input id="user-name" type="text" name="name" placeholder="Имя Фамилия">
-        </p>
-        <p>
-          <label for="user-email">Ваш e-mail:</label><br>
-          <input id="user-email" type="text" name="email" placeholder="email@example.com">
-        </p>
-        <p>
-          <label for="message">Текст письма:</label><br>
-          <textarea id="message" name="message" rows="10" cols="45" placeholder="В свободной форме"></textarea>
-        </p>
-        <button class="button" type="submit">Отправить</button>
+        <div class="form-container">
+          <p class="mail-form">
+            <label for="user-name">Ваше имя:</label><br>
+            <input id="user-name" type="text" name="name" placeholder="Имя Фамилия">
+          </p>
+          <p class="mail-form">
+            <label for="user-email">Ваш e-mail:</label><br>
+            <input id="user-email" type="text" name="email" placeholder="email@example.com">
+          </p>
+          <div class="mail-text">
+            <label for="message">Текст письма:</label><br>
+            <textarea id="message" name="message" rows="10" cols="45" placeholder="В свободной форме"></textarea>
+          </div>
+        </div>
+        <div class="button-container">
+          <button class="button-mail" href="#" type="submit">Отправить</button>
+        </div>
       </form>
       <span class="modal-close">Закрыть</span>
     </section>
