--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
       </div>
     </footer>
 
-    <section class="modal modal-cart">
+    <section class="modal modal-cart visually-hidden">
       <p>Товар добавлен в корзину!</p>
       <div class="buttonz">
         <a class="modal-cart-button" href="#" tabindex="0">Оформить заказ</a>
@@ -384,7 +384,7 @@
       <button class="modal-close" type="button">Закрыть</button>
     </section>
 
-    <section class="modal modal-mail">
+    <section class="modal modal-mail visually-hidden">
       <form class="mail" method="post" action="https://echo.htmlacademy.ru">
         <div class="form-container">
           <p class="mail-form">
@@ -409,7 +409,7 @@
 
     <!-- popUp Map -->
     <section class="modal modal-map visually-hidden">
-      <!-- ТУТ БУДЕТ КАРТА -->>
+      <!-- ТУТ БУДЕТ КАРТА -->
       <button class="modal-close" type="button">Закрыть</button>
     </section>
   </body>
