--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     <a class="bookmark" href="#">В закладки</a>
                   </div>
                   <figure class="image">
-                    <img src="img/snippet-1.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
+                    <img class="catalog-item-image" src="img/snippet-1.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
                   </figure>
                   <div class="title">Перфоратор BOSCH BFG 9000</div>
                   <div class="old-price">32500 ₽.</div>
@@ -144,7 +144,7 @@
                     <a class="bookmark" href="#">В закладки</a>
                   </div>
                   <figure class="image">
-                    <img src="img/snippet-3.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
+                    <img class="catalog-item-image" src="img/snippet-3.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
                   </figure>
                   <div class="title">Перфоратор BOSCH BFG 3000</div>
                   <div class="old-price">22500 ₽.</div>
@@ -158,7 +158,7 @@
                     <a class="bookmark" href="#">В закладки</a>
                   </div>
                   <figure class="image">
-                    <img src="img/snippet-2.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
+                    <img class="catalog-item-image" src="img/snippet-2.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
                   </figure>
                   <div class="title">Перфоратор BOSCH BFG 6000</div>
                   <div class="old-price">30500 ₽.</div>
@@ -172,7 +172,7 @@
                     <a class="bookmark" href="#">В закладки</a>
                   </div>
                   <figure class="image">
-                    <img src="img/snippet-3.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
+                    <img class="catalog-item-image" src="img/snippet-3.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
                   </figure>
                   <div class="title">Перфоратор BOSCH BFG 2000</div>
                   <div class="old-price">12500 ₽.</div>
@@ -244,54 +244,46 @@
             <p>Хороший интернет-магазин отличается от плохого не только ценами!<br> Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
           </div>
 
-          <div class="services-description container">
+          <div class="services-container">
 
-            <div class="services-item-1">
-              <ul class="services-navigation">
-                <li><a href="#">Доставка</a></li>
-                <li><a href="#">Гарантия</a></li>
-                <li><a href="#">Кредит</a></li>
-              </ul>
-              <div class="services-description">
-                <h3>Доставка</h3>
-                <p>
-                  Мы с удовольствием доставим ваш товар прямо<br> к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем,<br> поднимая его на ваш этаж!
-                </p>
-              </div>
+            <div class="slider-controls">
+              <label for="service-1">Первый</label>
+              <label for="service-2">Второй</label>
+              <label for="service-3">Третий</label>
             </div>
 
-            <div class="services-item-2">
-              <ul class="services-navigation">
-                <li><a href="#">Доставка</a></li>
-                <li><a href="#">Гарантия</a></li>
-                <li><a href="#">Кредит</a></li>
-              </ul>
-              <div class="services-description">
-                <h3>Гарантия</h3>
-                <p>
-                  Если купленный у нас товар поломается или заискрит,<br> а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый.<br> Дом уж восстановите как-нибудь сами.
-                </p>
-              </div>
-            </div>
+            <ul class="slider-service-list">
 
-            <div class="services-item-3">
-              <ul class="services-navigation">
-                <li><a href="#">Доставка</a></li>
-                <li><a href="#">Гарантия</a></li>
-                <li><a href="#">Кредит</a></li>
-              </ul>
-              <div class="services-description">
-                <h3>Кредит</h3>
-                <p>
-                  Залезть в долговую яму стало проще.<br> Кредитные консультации придут вам на помощь.
+              <li class="slider-service-item slide-service" id="slide1">
+                <h3 class="slide-service-title">Доставка</h3>
+                <p  class="slide-service-description">
+                  Мы с удовольствием доставим ваш товар прямо 
+                  к вашему подъезду совершенно бесплатно!
+                  Ведь мы неплохо заработаем, 
+                  поднимая его на ваш этаж!
                 </p>
-                <a class="button" href="#" tabindex="0">
-                  Отправить заявку
-                </a>
-              </div>
-            </div>
+              </li>
 
-          </div> <!-- services-description -->
+              <li class="slider-service-item slide-service" id="slide2">
+                <h3 class="slide-service-title">Гарантия</h3>
+                <p  class="slide-service-description">
+                  Если купленный у нас товар поломается или заискрит, 
+                  а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. 
+                  Дом уж восстановите как-нибудь сами.
+                </p>
+              </li>
+
+              <li class="slider-service-item slide-service" id="slide3">
+                <h3 class="slide-service-title">Кредит</h3>
+                <p  class="slide-service-description">
+                  Залезть в долговую яму стало проще! 
+                  Кредитные консультанты придут вам на помощь.
+                </p>
+                <a class="button-mail" href="#" type="submit">Отправить заявку</a>
+              </li>
+
+            </ul>
+          </div> <!-- services-container -->
 
         </div> <!-- container -->
 
@@ -408,10 +400,12 @@
     </section>
 
     <!-- map -->
-    <section class="modal modal-map map">
+    <section class="modal modal-map map visually-hidden">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533252!2d30.320858716364103!3d59.938716481876185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sby!4v1542449925434" width="940" height="446" allowfullscreen></iframe>
       <button class="modal-close" type="button">Закрыть</button>
     </section>
   </body>
+
+  <div class="overlay"></div>
 
 </html>
