--- a/index.html
+++ b/index.html
@@ -246,11 +246,11 @@
 
           <div class="services-container">
 
-            <div class="slider-controls">
-              <label for="service-1">Первый</label>
-              <label for="service-2">Второй</label>
-              <label for="service-3">Третий</label>
-            </div>
+            <ul class="slider-controls">
+              <li class="service-1 active">Доставка</li>
+              <li class="service-2">Гарантия</li>
+              <li class="service-3">Кредит</li>
+            </ul>
 
             <ul class="slider-service-list">
 
