--- a/index.html
+++ b/index.html
@@ -244,46 +244,49 @@
         </div>
       </div>
 
-      <div class="container">  
-        <div class="tab-frame">           
+      <div class="delivery-and-services-content">
+        <div class="container">
+          <div class="tab-frame">
             <input type="radio" checked name="tab" id="tab1">
-            <label for="tab1">Доставка</label>  
+            <label for="tab1">Доставка</label>
             <input type="radio" name="tab" id="tab2">
-            <label for="tab2">Гарантии</label> 
-            <input type="radio" name="tab" id="tab3">       
+            <label for="tab2">Гарантии</label>
+            <input type="radio" name="tab" id="tab3">
             <label for="tab3">Кредит</label>
+
             <div class="tab">
-            <h3>Доставка</h3>
-            <p>
-                Мы с удовольствием доставим ваш товар прямо 
-                к вашему подъезду совершенно бесплатно!
-                Ведь мы неплохо заработаем, 
-                поднимая его на ваш этаж!
-            </p>
+              <h3>Доставка</h3>
+              <p>
+                  Мы с удовольствием доставим ваш товар прямо
+                  к вашему подъезду совершенно бесплатно!
+                  Ведь мы неплохо заработаем,
+                  поднимая его на ваш этаж!
+              </p>
             </div>
             <div class="tab">
-            <h3>Гарантия</h3>
-            <p>
-                Если купленный у нас товар поломается или заискрит, 
-                а также в случае пожара, спровоцированного его возгаранием,  
-                вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. 
-                Дом уж восстановите как-нибудь сами.
-            </p>
+              <h3>Гарантия</h3>
+              <p>
+                  Если купленный у нас товар поломается или заискрит,
+                  а также в случае пожара, спровоцированного его возгаранием,
+                  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый.
+                  Дом уж восстановите как-нибудь сами.
+              </p>
             </div>
             <div class="tab">
-            <h3>Кредит</h3>
-            <p>
-                Залезть в долговую яму стало проще! 
-                Кредитные консультанты придут вам на помощь.
-            </p>
-            <a class="mail-btn" href="#" type="submit">Отправить заявку</a>
-            </div>   
-        </div>       
+              <h3>Кредит</h3>
+              <p>
+                  Залезть в долговую яму стало проще!
+                  Кредитные консультанты придут вам на помощь.
+              </p>
+              <button class="mail-btn" href="#" type="submit">Отправить заявку</button>
+            </div>
+          </div>
+        </div>
       </div>
-      
 
 
- 
+
+
 
 
       <div class="container">
