--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="header-top">
           <a class="header-logo">Техномарт</a>
           <form class="search">
-            <input type="text" placeholder="Поиск:">
+            <input class="input" type="text" placeholder="Поиск:">
             <button class="visually-hidden" type="submit">Найти</button>
           </form>
           <a class="book-cart" href="#">Закладки: 0</a>
@@ -55,7 +55,8 @@
       <section class="container">
         <div class="promo-top">
           <ul class="promo-list">
-            <li class="promo-item-1 new">
+            <li class="promo-item-1">
+              <div class="flag flag-new">Новинка</div>
               <h3>Материалы</h3>
               <a href="#">На любой вкус</a>
             </li>
