--- a/index.html
+++ b/index.html
@@ -281,6 +281,8 @@
               </p>
               <button class="mail-btn" href="#" type="submit">Отправить заявку</button>
             </div>
+            <div class="shadow">              
+            </div>
           </div>
         </div>
       </div>
