блок about-us & map

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
               </p>
               <button class="mail-btn" href="#" type="submit">Отправить заявку</button>
             </div>
-            <div class="shadow">              
+            <div class="shadow">
             </div>
           </div>
         </div>
@@ -303,17 +303,19 @@
               <li><a class="order-2" href="#">Автотрейдинг</a></li>
               <li><a class="order-3" href="#">ЖелДорЭкспедиция</a></li>
             </ul>
-            <a class="btn" href="about.html" tabindex="0">Подробнее о компании</a>
           </div>
           <div class="contacts">
             <h2>Контакты</h2>
             <p>Вы можете забрать товар сами, заехав в наш офис.</p>
             <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533252!2d30.320858716364103!3d59.938716481876185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sby!4v1542449925434" width="300" height="158" allowfullscreen></iframe>
-            <a class="btn" name="write-us">
-              Заблудились? Напишите нам!
-            </a>
           </div>
         </section>
+      </div>
+      <div class="container">
+        <div class="buttonz">
+          <a class="btn" href="#" tabindex="0">Подробнее о компании</a>
+          <a class="btn btn-map" href="#" tabindex="0">Заблудились? Напишите нам!</a>
+        </div>
       </div>
     </main>
 
