catalog main nav

--- a/catalog.html
+++ b/catalog.html
@@ -10,13 +10,12 @@
   </head>
 
   <body>
-
     <header class="main-header">
       <div class="container">
         <div class="header-top">
           <a class="header-logo" href="index.html">Техномарт</a>
           <form class="search">
-            <input type="text" placeholder="Поиск:">
+            <input class="input" type="text" placeholder="Поиск:">
             <button class="visually-hidden" type="submit">Найти</button>
           </form>
           <a class="book-cart" href="#">Закладки: 0</a>
@@ -45,7 +44,7 @@
       </div>
       <div class="container">
         <nav class="main-navigation">
-          <ul class="site-navigation">
+          <ul class="header-top-navigation">
             <li><a href="index.html">Главная</a></li>
             <li><a href="about-us.html">Компания</a></li>
             <li><a>Каталог</a></li>
