--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="container">
         <nav class="main-navigation">
           <ul class="header-top-navigation">
-            <li><a href="#">Главная</a></li>
+            <li><a>Главная</a></li>
             <li><a href="about-us.html">Компания</a></li>
             <li><a href="catalog.html">Каталог</a></li>
             <li><a href="news.html">Новости</a></li>
